# torchbuilder

./: .gitignore  CHANGELOG.md  README.md  TODO.md  app.py  gitignore.txt  install.sh  main.py  pyproject.toml  setting.py  torchbuilder.sh  uninstall.sh
Documentation/: Color.md  FeedBack.md  ResultTable.md
Templates/default/: .gitignore  README.md  __init__.py  __init___4.py  __init___5.py  __init___9.py  bin.py  buildResultTable.py  checkpoint.py  color.py  config.yml  configFile.py  dataloader.py  dataset.py  dynamicMetric.py  experiment1.md  experiment1.py  feedback.py  formats.py  functions.py  logger.py  loss.py  main.py  make_computeCan_venv.sh  model.py  optimizer.py  requirements.txt  (+10 more)
Templates/default.bak/: README.md  dataloader.py  experiment1.py  functions.py  metric.py  requirements.txt  resultTable.json  resultTable.py  scheduler.py  template_format.txt  torchbuilder_theme.mplstyle  train.sh
builder_utils/: color.py  compiler.py  sol_builder.py  templates.py  utils.py
resources/: color.py  dataloader.py  dataset.py  dynamicMetric.py  experiment1.py  feedback.py  model.py  resultTable.py  result_table.csv  rtable.json  train.py  train_one_epoch.py  utils_init.py  validation_step.py
resources_old/: buildResultTable.py  checkpoint.py  config.yml  configFile.py  create_venv.sh  experiment1.md  experiment1.py  feedback.py  init_git.sh  loss.py  main.py  make_computecan_venv.sh  optimizer.py  requirements.txt  resultTable.json  resultTable.py  scheduler.py  sol_README.md  train.sh  utils_init.py
ressources/: gitignore.txt  sol_README.md  version.txt
(+22 files in other folders)
